<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">拼图</string>
    <string name="start">开始游戏</string>
    <string name="language_option">语言首选项</string>
    <string name="about">关于</string>
    <string name="en">English</string>
    <string name="zh">简体中文</string>
    <string name="ja">日本語</string>
    <string name="go_on">继续游戏</string>
    <string name="look">查看排行</string>
    <string name="quit">退出游戏</string>
    <string name="refresh">刷新</string>
    <string name="back">返回</string>
    <string name="rank">名次</string>
    <string name="user_name">用户名</string>
    <string name="score">时间(s)</string>
    <string name="list">排行榜</string>
    <string name="refresh_success">刷新成功</string>
    <string name="empty">没有数据</string>
    <string name="about_1">作者...高杰</string>
    <string name="about_2">版本...1.0.0</string>
    <string name="about_3">日期...2019/8/30</string>
    <string name="grade_of_difficult">当前难度:</string>
    <string name="game_time">游戏时间:</string>
    <string name="pause">游戏暂停</string>
    <string name="increase">升高难度</string>
    <string name="decrease">降低难度</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="player_name">玩家姓名</string>
    <string name="remind">提示</string>
    <string name="leave_info">你确定离开游戏吗？</string>
    <string name="start_info">你确定开始新游戏吗？</string>
    <string name="quit_directly">直接退出</string>
    <string name="quit_save">保存退出</string>
    <string name="success">成功过关！</string>
    <string name="restart">重新开始</string>
    <string name="save_success">保存成功!</string>
    <string name="paused">游戏已暂停！</string>
    <string name="save_game">保存游戏</string>
    <string name="already_the_most_level">已经是最高等级</string>
    <string name="already_the_less_level">已经是最低等级</string>
    <string name="no_name">请输入用户名</string>

</resources>
