<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mytoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:text="@string/start"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold|italic"
            android:shadowColor="#abacab"
            android:shadowDx="20.0"
            android:shadowDy="10.0"
            android:shadowRadius="1.0"/>

        <Button
            android:id="@+id/go_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@null"
            android:text="@string/go_on"
            android:textSize="@dimen/sp_25"
            android:textStyle="italic|bold"
            android:shadowColor="#abacab"
            android:shadowDx="20.0"
            android:shadowDy="10.0"
            android:shadowRadius="1.0"/>

        <Button
            android:id="@+id/look"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@null"
            android:text="@string/look"
            android:textSize="@dimen/sp_25"
            android:textStyle="italic|bold"
            android:shadowColor="#abacab"
            android:shadowDx="20.0"
            android:shadowDy="10.0"
            android:shadowRadius="1.0"/>

        <Button
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@null"
            android:text="@string/quit"
            android:textSize="@dimen/sp_25"
            android:textStyle="italic|bold"
            android:shadowColor="#abacab"
            android:shadowDx="20.0"
            android:shadowDy="10.0"
            android:shadowRadius="1.0"/>
    </LinearLayout>
</RelativeLayout>
